finished raw CRUD for users, still WIP
